feat: integrate EnrollmentRepository into CourseServiceImpl and update getEnrolledStudents method for actual enrollment retrieval